tooltip overflow fix

--- a/client/components/AnalyticsPage/AnalyticsPage.scss
+++ b/client/components/AnalyticsPage/AnalyticsPage.scss
@@ -3,3 +3,9 @@
   width: 30px;
   height: 30px;
 }
+
+.circle:after {
+  width: 300px;
+  white-space: normal;
+  text-align: center;
+}
